doc-yaml/ingress/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: app.xiejiawen.cn
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: svc-tomcat
            port:
              number: 8080
  defaultBackend:
    service:
      name: svc-tomcat
      port:
        number: 8080
